; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libpam/modules/pam_unix/extr_pam_unix.c_makesalt.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libpam/modules/pam_unix/extr_pam_unix.c_makesalt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SALTSIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @makesalt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @makesalt(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @SALTSIZE, align 4
  %5 = add nsw i32 %4, 1
  %6 = zext i32 %5 to i64
  store i32 0, i32* %3, align 4
  br label %7

7:                                                ; preds = %18, %1
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @SALTSIZE, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %21

11:                                               ; preds = %7
  %12 = load i8*, i8** %2, align 8
  %13 = load i32, i32* %3, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i8, i8* %12, i64 %14
  %16 = call i32 (...) @arc4random()
  %17 = call i32 @to64(i8* %15, i32 %16, i32 4)
  br label %18

18:                                               ; preds = %11
  %19 = load i32, i32* %3, align 4
  %20 = add nsw i32 %19, 4
  store i32 %20, i32* %3, align 4
  br label %7

21:                                               ; preds = %7
  %22 = load i8*, i8** %2, align 8
  %23 = load i32, i32* @SALTSIZE, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i8, i8* %22, i64 %24
  store i8 0, i8* %25, align 1
  ret void
}

declare dso_local i32 @to64(i8*, i32, i32) #1

declare dso_local i32 @arc4random(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
